feat: add generate content
