# docs/swagger.json
@@ -58,11 +58,59 @@
                     }
                 }
             }
+        },
+        "/content/generate": {
+            "get": {
+                "description": "Генерирует контент для телеграм поста на заданную тему с помощью AI",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "content"
+                ],
+                "summary": "Генерация контента для поста",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Тема контента",
+                        "name": "theme",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/content.GenerateContentResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный формат запроса",
+                        "schema": {
+                            "$ref": "#/definitions/httpx.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/httpx.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
         "auth.LoginRequest": {
             "type": "object",
+            "required": [
+                "login",
+                "password"
+            ],
             "properties": {
                 "login": {
                     "type": "string"
@@ -77,6 +125,17 @@
             "properties": {
                 "token": {
                     "type": "string"
+                }
+            }
+        },
+        "content.GenerateContentResponse": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/httpx.Status"
                 }
             }
         },
