# internal/delivery/http/content/types.go
@@ -1,0 +1,8 @@
+package content
+
+import "github.com/SergeyBogomolovv/fitflow/pkg/httpx"
+
+type GenerateContentResponse struct {
+	Status  httpx.Status `json:"status"`
+	Content string       `json:"content"`
+}
